test/libyul/yulSyntaxTests/hex_switch_case.yul
{
    switch codesize()
    case hex"00" {}
    case hex"1122" {}
}
// ----
// ParserError 1856: (33-40): Literal or identifier expected.
